syntax = "proto3";

package landns;

option go_package = "pkg/rpcgen";

import "google/protobuf/empty.proto";
// import "google/protobuf/any.proto";

message Lease{
    string mac = 1;
    string ip = 2;
    string hostname = 3;
}

message SetLeasesRequest{
    repeated Lease leases = 1;
    string agentName = 2;
}

service LanDNS {
    rpc SetLeases(SetLeasesRequest) returns (google.protobuf.Empty);
}

message GetLeasesResponse{
    repeated Lease leases = 1;
}

service LanDNSAgent {
    rpc GetLeases(google.protobuf.Empty) returns (GetLeasesResponse);
}